--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
-<head><title></title></head>
+<html lang="es">
+<head><title>PRACTICA 0</title></head>
 <body><p>Hola SalvadorICAI</p></body>
 </html>
